nav bar wide screen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <title>Resume Builder Copy</title>
   </head>
   <body>
-    <div>hey</div>
-    <div>second</div>
+    <nav class="nav">
+      <a class="nav-logo" href="/">
+        <svg
+          width="36"
+          height="44"
+          viewBox="0 0 36 44"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M35.801 43.867l-21.03-20.978 4.315 1.046c5.125 1.241 8.772.343 11.158-2.148 1.87-1.952 2.883-4.888 2.883-7.526H35.8v29.606zM3.337 36.01h28.006c1.195-11.49 1.792-18.686 1.792-21.587 0-6.777-5.03-11.087-12.984-11.087H3.337V36.01zm32.21 2.673H.664V.663H20.15c9.347 0 15.658 5.408 15.658 13.76 0 3.273-.087 11.36-.261 24.26z"
+            fill-rule="nonzero"
+          ></path>
+        </svg>
+        <div class="nav-logo__title">Resume Builder</div>
+      </a>
+      <div class="nav-right">
+        <a href="#" class="nav-link">Login</a>
+        <a href="#" class="nav-link">Sign Up</a>
+      </div>
+    </nav>
   </body>
 </html>
