--- a/index.html
+++ b/index.html
@@ -24,5 +24,20 @@
         <a href="#" class="nav-link">Sign Up</a>
       </div>
     </nav>
+
+    <div class="hiddenhero">
+      <main class="hero">
+        <div>
+          <h1>Resume Builder</h1>
+          <p>
+            A free tool that lets you create a professional resume in minutes.
+            We make it dead simple to build a resume, so you can get hired
+            sooner.
+          </p>
+          <a href="#" class="cta">Create Your resume</a>
+        </div>
+        <figure>right</figure>
+      </main>
+    </div>
   </body>
 </html>
