--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
           </p>
           <a href="#" class="cta">Create Your resume</a>
         </div>
-        <figure>right</figure>
+        <figure>
+          <div class="circle circle1"></div>
+          <div class="circle circle2"></div>
+          <div class="circle circle3"></div>
+        </figure>
       </main>
     </div>
   </body>
