slight modification to cta

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             We make it dead simple to build a resume, so you can get hired
             sooner.
           </p>
-          <a href="#" class="cta">Create Your resume</a>
+          <a href="#" class="cta">Create Your Resume</a>
         </div>
         <figure>
           <div class="circle circle1"></div>
