--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <div class="circle circle1"></div>
           <div class="circle circle2"></div>
           <div class="circle circle3"></div>
+          <div class="main-paper"></div>
         </figure>
       </main>
     </div>
