main section almost done on all widths

--- a/index.html
+++ b/index.html
@@ -40,7 +40,78 @@
           <div class="circle circle1"></div>
           <div class="circle circle2"></div>
           <div class="circle circle3"></div>
-          <div class="main-paper"></div>
+          <div class="main-paper main-paper1"></div>
+          <div class="main-paper main-paper2"></div>
+          <div class="main-paper main-paper3">
+            <div class="paper">
+              <div class="paper-col">
+                <div class="paper-title">
+                  Galois Evariste
+                  <h4>Web Developer Resume</h4>
+                </div>
+                <div class="paper-right text-right">
+                  <div>123 main street</div>
+                  <div>123 456 7890</div>
+                  <div>galois@email.com</div>
+                  <div>github.com/galois-evariste</div>
+                </div>
+              </div>
+              <div class="paper-col">
+                <div class="paper-title">Summary</div>
+                <div class="paper-right">
+                  <div>
+                    Junior Software Engineer with experience developing scalable
+                    software systems for startups to fortune 500's. Strength on
+                    both ends of the stack, alongside dev-ops.
+                  </div>
+                </div>
+              </div>
+              <div class="paper-col">
+                <div class="paper-title">Education</div>
+                <div class="paper-right">
+                  <div class="bold">
+                    Bachelors of Engineering, University of Victoria
+                  </div>
+                  <div>August 2012 - April 2018</div>
+                  <div>
+                    Computer Engineer with specialization in Embedded Systems,
+                    Photonics and Error Control Coding.
+                  </div>
+                </div>
+              </div>
+              <div class="paper-col">
+                <div class="paper-title">Experience</div>
+                <div class="paper-right">
+                  <div class="bold">Software Engineer</div>
+                  <div>Flower Software</div>
+                  <div>July 2016 - Present</div>
+                  <div>
+                    - Migrated legacy rails application to golang and react to
+                    increase server and developer performance by 300%.
+                  </div>
+                  <div>
+                    - Worked in an agile development team with daily scrum
+                    meetings and a cross-functional team.
+                  </div>
+                  <div class="bold push">Junior Software Engineer</div>
+                  <div>Systems Software</div>
+                  <div>January 2015 - June 2016</div>
+                  <div>
+                    - Developed a set of internal tools for analysis of issues
+                    on the load balancer.
+                  </div>
+                  <div>
+                    - Recieved a Team Player award from directors for most pull
+                    requests reviewed.
+                  </div>
+                </div>
+              </div>
+              <div class="paper-col">
+                <div class="paper-title"></div>
+                <div class="paper-right"></div>
+              </div>
+            </div>
+          </div>
         </figure>
       </main>
     </div>
