complete features section for full screen width

--- a/index.html
+++ b/index.html
@@ -115,5 +115,182 @@
         </figure>
       </main>
     </div>
+
+    <div class="whitebg">
+      <section id="features" class="flex flex__spread">
+        <div class="col-left">
+          <h6>Features</h6>
+        </div>
+        <div class="col-right">
+          <div class="flex flex__spread">
+            <div class="item">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  stroke="#0091FF"
+                  stroke-width=".5"
+                  fill="none"
+                  fill-rule="evenodd"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M23.5.5h-20v20h20V.5zM7.496 4.497h12M7.496 8.497h12M7.496 12.497h12M7.496 16.497H13"
+                  ></path>
+                  <path d="M3.5 4.5h-3v19h19v-3"></path>
+                </g>
+              </svg>
+              <h5>Industry Templates</h5>
+              <p>
+                We know that an engineer will need a different resume than a
+                nurse. That’s why we designed resumes for specific professions.
+              </p>
+            </div>
+            <div class="item">
+              <svg
+                width="24"
+                height="22"
+                viewBox="0 0 24 22"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  stroke="#0091FF"
+                  stroke-width=".5"
+                  fill="none"
+                  fill-rule="evenodd"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M16.966 3.787a1.1 1.1 0 0 1 .534.944V9.37L12 12.908 6.5 9.37V4.731a1.1 1.1 0 0 1 .534-.944l4.4-2.64a1.1 1.1 0 0 1 1.132 0l4.4 2.64zM12 7.408v5.5"
+                  ></path>
+                  <path
+                    d="M17.5 16.208l-5.5-3.3 5.5-3.538 5 3.213a1.1 1.1 0 0 1 .5.925v4.062a1.1 1.1 0 0 1-.5.925l-4.4 2.83a1.1 1.1 0 0 1-1.19 0L12 18.17v-5.262M17.5 16.208V21.5M12 12.908v5.262l-4.9 3.155a1.1 1.1 0 0 1-1.19 0l-4.4-2.83A1.1 1.1 0 0 1 1 17.57v-4.062a1.1 1.1 0 0 1 .5-.925l5-3.213 5.5 3.538-5.5 3.3M6.5 16.208l-5.369-3.221M6.5 16.208V21.5M12 7.408L6.641 4.192M17.359 4.192L12 7.408M22.869 12.987L17.5 16.208"
+                  ></path>
+                </g>
+              </svg>
+              <h5>PDF Export</h5>
+              <p>
+                We allow PDF exports for your resume, which is the most common
+                format for online resume submissions.
+              </p>
+            </div>
+            <div class="item">
+              <svg
+                width="10"
+                height="20"
+                viewBox="0 0 10 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  stroke="#0091FF"
+                  stroke-width=".5"
+                  fill="none"
+                  fill-rule="evenodd"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M8.718 2.711H3.842a3.218 3.218 0 0 0-1.199 6.204l4.95 1.981A3.218 3.218 0 0 1 6.394 17.1h-4.87M5 19.501v-2.398M5 2.713V.315"
+                  ></path>
+                </g>
+              </svg>
+              <h5>100% Free</h5>
+              <p>
+                No required sign-up or payment. Build and download your resume
+                with no hidden costs or catches.
+              </p>
+            </div>
+            <div class="item">
+              <svg
+                width="22"
+                height="23"
+                viewBox="0 0 22 23"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  stroke="#0091FF"
+                  stroke-width=".5"
+                  fill="none"
+                  fill-rule="evenodd"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M.5 14.5C4.027 5.134 5.86.451 6 .451c.14 0 1.973 4.683 5.5 14.049M2.032 10.498h7.932M21.5 9c-6.502 8.954-9.85 13.439-10.046 13.455-.195.016-1.846-1.469-4.954-4.455"
+                  ></path>
+                </g>
+              </svg>
+              <h5>Auto Proofreading</h5>
+              <p>
+                Our built in proofreader catches spelling & grammar mistakes
+                before your future employer does.
+              </p>
+              <span class="coming-soon">COMING SOON</span>
+            </div>
+            <div class="item">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  stroke="#0091FF"
+                  stroke-width=".5"
+                  fill="none"
+                  fill-rule="evenodd"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <circle cx="12" cy="12" r="11.5"></circle>
+                  <path
+                    d="M10.464 12.914l2.122 2.122M3.564 19.815l9.022-9.022a1 1 0 0 1 1.414 0l.707.707a1 1 0 0 1 0 1.414l-8.825 8.825M7.5 7.5v2M8.5 8.5h-2M12.5 5.5v2M13.5 6.5h-2M18.5 9v3M20 10.5h-3"
+                  ></path>
+                </g>
+              </svg>
+              <h5>Real-Time Collaboration</h5>
+              <p>
+                Want feedback on your resume? One-click share let’s you
+                collaborate with friends in real time.
+              </p>
+              <span class="coming-soon">COMING SOON</span>
+            </div>
+            <div class="item">
+              <svg
+                width="22"
+                height="22"
+                viewBox="0 0 22 22"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  transform="translate(1)"
+                  fill-rule="nonzero"
+                  stroke="#0091FF"
+                  stroke-width=".5"
+                  fill="none"
+                >
+                  <rect y="7.5" width="5" height="14" rx=".5"></rect>
+                  <ellipse cx="2.48" cy="3" rx="2.48" ry="2.5"></ellipse>
+                  <path
+                    d="M16.5 21.5h3a.5.5 0 0 0 .5-.5v-8.4C20 8.83 17.87 7 14.89 7a4.21 4.21 0 0 0-3.17 1.27A.41.41 0 0 1 11 8a.5.5 0 0 0-.5-.5h-3A.5.5 0 0 0 7 8v13a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-7.5a2.5 2.5 0 1 1 5 0V21a.5.5 0 0 0 .5.5z"
+                  ></path>
+                </g>
+              </svg>
+              <h5>LinkedIn Ready</h5>
+              <p>
+                We integrate with Linkedin to automatically fill your resume
+                with your experience and skills.
+              </p>
+              <span class="coming-soon">COMING SOON</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
